# edp-vmemo-subclip

./: .gitignore  main_moviepy_clip.py  pyproject.toml
player/: .env.example  .gitignore  README.md  main.py  main_moviepy_clip.py  pyproject.toml
receiver/: platformio.ini
receiver/src/: main.cpp
unity-app/MonoBleedingEdge/EmbedRuntime/: MonoPosixHelper.dll:Zone.Identifier
unity-app/Vmemo_Data/: ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  resources.assets.resS  sharedassets0.assets
